practice-examples/config-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-app
  namespace: staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
